--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -11,7 +11,8 @@
     
 </head>
 <body>
-
+  
+<div class="page-wrapper">
   <!-- Navbar section -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -56,9 +57,9 @@
   </div>
 </div>
 
-<div id="main-content2" class="main-content2">
 <!-- Ongoing maintenance section -->
-<div class="flex-wrapper2">
+<div id="main-content2" class="main-content2">
+<div id="orange-container" class="flex-wrapper2">
   <div class="flex-item2">
     <span class="lamp-container2">
       <div class="lamp2"></div>
@@ -70,7 +71,8 @@
     <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
     <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
-    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
 
   <div class="flex-item2">
@@ -84,7 +86,8 @@
     <span class="atgard">Åtgärd pågår: Omstart av server</span><br>
     <span class="losningstid">Förväntad lösningstid: 1 dag</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 2 timmar</span><br>
-    <span class="kontakt">Kontakt: Jane Doe/janedoe@gmail.com/07yyyyyyyy</span>
+    <span class="kontakt">Kontakt: Jane Doe/janedoe@gmail.com/07yyyyyyyy</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
 </div>
 </div>
@@ -101,9 +104,9 @@
   </div>
 </div>
 
-<div id="main-content1" class="main-content1">
 <!-- Malfunction section -->
-<div class="flex-wrapper1">
+<div id="main-content1" class="main-content1">
+<div id="red-container" class="flex-wrapper1">
   <div class="flex-item1">
     <span class="lamp-container1">
       <div class="lamp1"></div>
@@ -115,7 +118,8 @@
     <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
     <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
-    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
   
   <div class="flex-item1">
@@ -129,7 +133,8 @@
     <span class="atgard">Åtgärd pågår: Omstart av server</span><br>
     <span class="losningstid">Förväntad lösningstid: 1 dag</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 2 timmar</span><br>
-    <span class="kontakt">Kontakt: Jane Doe/janedoe@gmail.com/07yyyyyyyy</span>
+    <span class="kontakt">Kontakt: Jane Doe/janedoe@gmail.com/07yyyyyyyy</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
   
   <div class="flex-item1">
@@ -143,7 +148,8 @@
     <span class="atgard">Åtgärd pågår: Uppdatering av databas</span><br>
     <span class="losningstid">Förväntad lösningstid: 3 dagar</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 1 månad</span><br>
-    <span class="kontakt">Kontakt: Anonymous/anonymous@gmail.com/07zzzzzzzz</span>
+    <span class="kontakt">Kontakt: Anonymous/anonymous@gmail.com/07zzzzzzzz</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
   
   <div class="flex-item1">
@@ -157,7 +163,8 @@
     <span class="atgard">Åtgärd pågår: Inväntar sysadmin login</span><br>
     <span class="losningstid">Förväntad lösningstid: 1-2 veckor</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 1 vecka</span><br>
-    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span>
+    <span class="kontakt">Kontakt: John Doe/johndoe@gmail.com/07xxxxxxxx</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
   
   <div class="flex-item1">
@@ -171,9 +178,10 @@
     <span class="atgard">Åtgärd pågår: Omstart av server</span><br>
     <span class="losningstid">Förväntad lösningstid: 1 dag</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 2 timmar</span><br>
-    <span class="kontakt">Kontakt: Jane Doe/janedoe@gmail.com/07yyyyyyyy</span>
+    <span class="kontakt">Kontakt: Jane Doe/janedoe@gmail.com/07yyyyyyyy</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
-  
+
   <div class="flex-item1">
     <span class="lamp-container1">
       <div class="lamp1"></div>
@@ -185,8 +193,10 @@
     <span class="atgard">Åtgärd pågår: Uppdatering av databas</span><br>
     <span class="losningstid">Förväntad lösningstid: 3 dagar</span><br>
     <span class="uppdatering">Nästa uppdatering: Om 1 månad</span><br>
-    <span class="kontakt">Kontakt: Anonymous/anonymous@gmail.com/07zzzzzzzz</span>
+    <span class="kontakt">Kontakt: Anonymous/anonymous@gmail.com/07zzzzzzzz</span><br>
+    <button class="moveBtn">Flytta knapp</button>
   </div>
+</div>
 </div>
 </div>
 
