--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/css/pikaday.min.css">
 </head>
 <body>
+<main class="content">
 
 <!-- Navbar section -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -88,6 +89,7 @@
   </div>  
 </div>
 
+</main>
 <footer>
   <p class="footer-text">Telge</p>
 </footer>
