--- a/lia2Proj/Finished.html
+++ b/lia2Proj/Finished.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finished</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./css/Malfunctions.css"/>
-    <link rel="stylesheet" href="./css/Finished.css"/>
-    <link rel="stylesheet" href="./css/telgeFont.css"/>
+    <link rel="stylesheet" href="./Malfunctions.css"/>
+    <link rel="stylesheet" href="./Finished.css"/>
+    <link rel="stylesheet" href="./telgeFont.css"/>
 </head>
 <body>
 <!-- Navbar section -->
@@ -125,7 +125,7 @@
     <p class="footer-text">Telge</p>
 </footer>
 
-<script src="script/Finished.js"></script>
+<script src="/Finished.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
