--- a/lia2Proj/Malfunctions.html
+++ b/lia2Proj/Malfunctions.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malfunctions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./css/Malfunctions.css"/>
-    <link rel="stylesheet" href="./css/Ongoing.css"/>
-    <link rel="stylesheet" href="./css/telgeFont.css"/>
+    <link rel="stylesheet" href="./Malfunctions.css"/>
+    <link rel="stylesheet" href="./Ongoing.css"/>
+    <link rel="stylesheet" href="./telgeFont.css"/>
     
 </head>
 <body>
@@ -206,7 +206,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-<script src="script/Malfunctions.js"></script>
-<script src="script/Ongoing.js"></script>
+<script src="/Malfunctions.js"></script>
+<script src="/Ongoing.js"></script>
 </body>
 </html>
