--- a/lia2Proj/Upcoming.html
+++ b/lia2Proj/Upcoming.html
@@ -6,9 +6,9 @@
     <title>Upcoming</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.15/index.global.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./css/Malfunctions.css"/>
-    <link rel="stylesheet" href="./css/Upcoming.css"/>
-    <link rel="stylesheet" href="./css/telgeFont.css"/>
+    <link rel="stylesheet" href="./Malfunctions.css"/>
+    <link rel="stylesheet" href="./Upcoming.css"/>
+    <link rel="stylesheet" href="./telgeFont.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/css/pikaday.min.css">
 </head>
 <body>
@@ -94,7 +94,7 @@
   <p class="footer-text">Telge</p>
 </footer>
 
-<script src="script/Upcoming.js"></script>
+<script src="/Upcoming.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/pikaday.min.js"></script>
